rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__increment_comparison.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (increment_comparison), \"++foo > bar\")"
---
(++foo > bar)
