rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__increment_operators_prefix.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (increment_operators_prefix), \"++a; --a;\")"
---
[
    ExprStmt(
        Atom(
            Increment(
                Increment {
                    expr: PlaceExpr {
                        ident: Ident(
                            "a",
                        ),
                        array_accesses: [],
                    },
                    op: PlusPlus,
                    kind: Prefix,
                },
            ),
        ),
    ),
    ExprStmt(
        Atom(
            Increment(
                Increment {
                    expr: PlaceExpr {
                        ident: Ident(
                            "a",
                        ),
                        array_accesses: [],
                    },
                    op: MinusMinus,
                    kind: Prefix,
                },
            ),
        ),
    ),
]
