rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__inline_array_access.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (inline_array_access), \"[1, 2, 3][1]\")"
snapshot_kind: text
---
Atom(
    ArrayAccess(
        ArrayAccess {
            index_expr: Atom(
                Literal(
                    Number(
                        1,
                    ),
                ),
            ),
            lhs_expr: Atom(
                Array(
                    Array {
                        items: CommaSeparated {
                            items: [
                                Atom(
                                    Literal(
                                        Number(
                                            1,
                                        ),
                                    ),
                                ),
                                Atom(
                                    Literal(
                                        Number(
                                            2,
                                        ),
                                    ),
                                ),
                                Atom(
                                    Literal(
                                        Number(
                                            3,
                                        ),
                                    ),
                                ),
                            ],
                            delimiter: Bracket,
                        },
                    },
                ),
            ),
        },
    ),
)
