rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__jsp_example.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (jsp_example),\nr#\"\n    gms_path = gms_path + 'webapps\\\\appliance\\\\';\n    jsp = '<% out.println( \"' + jsp_print  + '\" ); %>';\n    \"#)"
---
[
    Assignment(
        Assignment {
            lhs: PlaceExpr {
                ident: Ident(
                    "gms_path",
                ),
                array_accesses: [],
            },
            op: Equal,
            rhs: Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "gms_path",
                            ),
                        ),
                    ),
                    op: Plus,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    119,
                                    101,
                                    98,
                                    97,
                                    112,
                                    112,
                                    115,
                                    92,
                                    97,
                                    112,
                                    112,
                                    108,
                                    105,
                                    97,
                                    110,
                                    99,
                                    101,
                                    92,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        },
    ),
    Assignment(
        Assignment {
            lhs: PlaceExpr {
                ident: Ident(
                    "jsp",
                ),
                array_accesses: [],
            },
            op: Equal,
            rhs: Binary(
                Binary {
                    lhs: Binary(
                        Binary {
                            lhs: Atom(
                                Literal(
                                    Data(
                                        [
                                            60,
                                            37,
                                            32,
                                            111,
                                            117,
                                            116,
                                            46,
                                            112,
                                            114,
                                            105,
                                            110,
                                            116,
                                            108,
                                            110,
                                            40,
                                            32,
                                            34,
                                        ],
                                    ),
                                ),
                            ),
                            op: Plus,
                            rhs: Atom(
                                Ident(
                                    Ident(
                                        "jsp_print",
                                    ),
                                ),
                            ),
                        },
                    ),
                    op: Plus,
                    rhs: Atom(
                        Literal(
                            Data(
                                [
                                    34,
                                    32,
                                    41,
                                    59,
                                    32,
                                    37,
                                    62,
                                ],
                            ),
                        ),
                    ),
                },
            ),
        },
    ),
]
