rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__left_associativity.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (left_associativity), \"3 - 3 - 3\")"
---
Binary(
    Binary {
        lhs: Binary(
            Binary {
                lhs: Atom(
                    Literal(
                        Number(
                            3,
                        ),
                    ),
                ),
                op: Minus,
                rhs: Atom(
                    Literal(
                        Number(
                            3,
                        ),
                    ),
                ),
            },
        ),
        op: Minus,
        rhs: Atom(
            Literal(
                Number(
                    3,
                ),
            ),
        ),
    },
)
