rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__logical_operator.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (logical_operator), \"a && 1; a || 1;\")"
---
[
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: AmpersandAmpersand,
                    rhs: Atom(
                        Literal(
                            Number(
                                1,
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: PipePipe,
                    rhs: Atom(
                        Literal(
                            Number(
                                1,
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
]
