rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__missing_right_curly_bracket-4.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (missing_right_curly_bracket),\n\"function a() { a = 2;\")"
---
error: Expected expression
  ┌─ missing_right_curly_bracket:1:22
  │
1 │ function a() { a = 2;
  │                      ^ Expected expression
