rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__mixed_array_access_fn_call.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Expr >\n(stringify! (mixed_array_access_fn_call), \"fn_array[5](a, b, c)\")"
---
fn_array[5](a, b, c)
